--- a/src/app/components/common/sucess-stories-blocks/SuccessStoriesBlock.css
+++ b/src/app/components/common/sucess-stories-blocks/SuccessStoriesBlock.css
@@ -1,3 +1,27 @@
+.on-hover {
+    position: relative;
+    overflow: hidden;
+}
+
+.display-hover {
+    position: absolute;
+    bottom: -100%;
+    left: 0.5rem;
+    right: 0.5rem;
+    top: 0.5rem;
+    background-color: rgba(0, 0, 0, 1);
+    border-radius: 1.5rem;
+    padding: 2rem;
+    opacity: 0;
+    transform: translateY(100%);
+    transition: transform 1s ease, opacity 0.3s ease;
+}
+
 .on-hover:hover .display-hover {
-    display: flex;
+    left: 0.5rem;
+    right: 0.5rem;
+    top: 0.5rem;
+    bottom: 0.5rem;
+    transform: translateY(0);
+    opacity: 1;
 }
