--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,6 +57,35 @@ body {
   width: 100%;
 }
 
+.menu-item-text {
+  position: relative;
+}
+
+.menu-item-text:hover {
+  padding-bottom: 4px;
+}
+
+.menu-item-text::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0%;
+  height: 2px;
+  background-color: #3b82f6;
+  transition: width 0.3s ease;
+}
+
+.menu-item-text:hover::after {
+  width: 25%;
+}
+
+.short-menu {
+  max-width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 
 @layer utilities {
   .text-balance {
