--- a/src/app/components/common/client-carousel/ClientCarousel.css
+++ b/src/app/components/common/client-carousel/ClientCarousel.css
@@ -1,24 +1,4 @@
-.client-logos-row {
-    /* overflow: hidden; */
-    white-space: nowrap;
-    width: 100%;
-  }
-  
-  .client-logos {
-    display: inline-block;
-    margin-right: 10px;
-  }
-  
-  .scrolling-wrapper {
-    display: flex;
-    animation: scroll 20s linear infinite;
-  }
-  
-  .scrolling-wrapper.reverse {
-    animation: scroll-reverse 20s linear infinite;
-  }
-  
-  @keyframes scroll {
+@keyframes marquee {
     0% {
       transform: translateX(0);
     }
@@ -27,7 +7,7 @@
     }
   }
   
-  @keyframes scroll-reverse {
+  @keyframes marqueeReverse {
     0% {
       transform: translateX(-100%);
     }
@@ -36,21 +16,21 @@
     }
   }
   
-  /* Add this to make the items repeat for a continuous scroll */
-  .scrolling-wrapper > .client-logos {
-    animation-duration: 20s;
-    animation-timing-function: linear;
+  .animate-marquee {
+    animation: marquee 15s linear infinite;
   }
   
-  .scrolling-wrapper > .client-logos:first-child {
-    animation-delay: 5s;
+  .animate-marquee-reverse {
+    animation: marqueeReverse 15s linear infinite;
   }
   
-  .scrolling-wrapper {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: flex-start;
+  .paused {
+    animation-play-state: paused;
   }
   
+  @media screen and (max-width: 768px) {
+    .paused {
+      animation-play-state: running;
+    }
+  }
   
