--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -81,9 +81,9 @@ body {
 }
 
 .short-menu {
-  max-width: 60%;
+  max-width: 50%;
   margin-left: auto;
-  margin-right: auto;
+  margin-right: 0;
 }
 
 
