--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -83,12 +83,20 @@ body {
 .short-menu {
   max-width: 50%;
   margin-left: auto;
-  margin-right: 0;
+  margin-right: 1rem;
 }
 
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .short-menu {
+    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
