--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,6 +42,15 @@ body {
   scrollbar-width: none;
 }
 
+pre code {
+  display: inline-block;
+  word-wrap: break-word;
+  white-space: pre-wrap;
+  word-break: break-word;
+  max-width: 100%;
+  overflow-wrap: break-word;
+}
+
 .menu-item-button::after {
   content: '';
   position: absolute;
