--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,14 +33,14 @@ body {
   padding-bottom: 4px;
 }
 
-.hide-scrollbar::-webkit-scrollbar {
+/* .hide-scrollbar::-webkit-scrollbar {
   display: none;
 }
 
 .hide-scrollbar {
   -ms-overflow-style: none;
   scrollbar-width: none;
-}
+} */
 
 pre code {
   display: inline-block;
