--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -132,10 +132,33 @@ table tr:nth-child(even) {
   width: 25%;
 }
 
+.specialization-block {
+  position: relative;
+}
+
+.specialization-block:before {
+  content: '';
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  border-radius: 3rem;
+  width: 100%;
+  height: 100%;
+  background-color: #1c4644;
+  opacity: 0.5;
+}
+
 .short-menu {
   max-width: 60%;
   margin-left: auto;
   margin-right: 1rem;
+  align-items: flex-start !important;
+}
+
+.small-menu ul + ul {
+  padding: 0;
 }
 
 .input-field-phone {
@@ -149,11 +172,29 @@ table tr:nth-child(even) {
   outline: none;
 }
 
+.PhoneInputCountrySelect::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+.PhoneInputCountrySelect::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1); 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+.PhoneInputCountrySelect::-webkit-scrollbar-thumb {
+  background: white; 
+  border-radius: 10px;
+}
+
 .PhoneInputCountrySelect {
   background-color: black;
+  right: 0;
 }
 
 .PhoneInputCountry {
+  position: static !important;
   padding: 0.5rem;
   border-radius: 0.3rem 0 0 0.3rem;
 }
