--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -207,7 +207,7 @@ table tr:nth-child(even) {
 }
 
 .phone-number-section .PhoneInputCountry {
-  background-color: #f1f1f1;
+  background-color: transparent;
 }
 
 .PhoneInputCountry {
