--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -233,13 +233,16 @@ table tr:nth-child(even) {
     margin-left: auto;
     margin-right: auto;
   }
-}
-
-@media only screen and (max-width: 600px) {
-  .top-banner-desc {
+  .hide-scrollbar::-webkit-scrollbar {
     display: none;
   }
 }
+
+/* @media only screen and (max-width: 600px) {
+  .top-banner-desc {
+    display: none;
+  }
+} */
 
 .list-alpha {
   list-style-type: lower-alpha;
